--- a/08_SVM_Python.ipynb
+++ b/08_SVM_Python.ipynb
@@ -2003,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "0982a0cd",
    "metadata": {
     "Rmd_chunk_options": "echo=TRUE",
@@ -2012,10 +2012,46 @@
      "report_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'grid_search' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Extract the best parameter value for C\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m optimal_C \u001b[38;5;241m=\u001b[39m \u001b[43mgrid_search\u001b[49m\u001b[38;5;241m.\u001b[39mbest_params_[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Initialize the SVC with the optimal C value\u001b[39;00m\n\u001b[1;32m      4\u001b[0m svc_optimal \u001b[38;5;241m=\u001b[39m SVC(C\u001b[38;5;241m=\u001b[39moptimal_C, kernel\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear\u001b[39m\u001b[38;5;124m'\u001b[39m)  \u001b[38;5;66;03m# Adjust kernel as needed\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'grid_search' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#\n",
-    "#"
+    "# Extract the best parameter value for C\n",
+    "optimal_C = grid_search.best_params_['C']\n",
+    "# Initialize the SVC with the optimal C value\n",
+    "svc_optimal = SVC(C=optimal_C, kernel='linear')  # Adjust kernel as needed\n",
+    "\n",
+    "# Fit the model on the training data\n",
+    "svc_optimal.fit(X_train, y_train)\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Make predictions on the training set\n",
+    "y_train_pred = svc_optimal.predict(X_train)\n",
+    "\n",
+    "# Calculate the training accuracy and error rate\n",
+    "train_accuracy_optimal = accuracy_score(y_train, y_train_pred)\n",
+    "train_error_rate_optimal = 1 - train_accuracy_optimal\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_test_pred = svc_optimal.predict(X_test)\n",
+    "\n",
+    "# Calculate the test accuracy and error rate\n",
+    "test_accuracy_optimal = accuracy_score(y_test, y_test_pred)\n",
+    "test_error_rate_optimal = 1 - test_accuracy_optimal\n",
+    "\n",
+    "# Print out the results\n",
+    "print(f\"Training Error Rate with optimal C ({optimal_C}): {train_error_rate_optimal}\")\n",
+    "print(f\"Test Error Rate with optimal C ({optimal_C}): {test_error_rate_optimal}\")"
    ]
   },
   {
